include/dev/ps2.h

struct naut_info;
// Keys and scancodes are represented internally as 16 bits
// so we can indicate nonexistence (via -1)
//
// A "keycode" consists of the translated key (lower 8 bits)
// combined with an upper byte that reflects status of the 
// different modifier keys
typedef uint16_t nk_keycode_t;
typedef uint16_t nk_scancode_t;
// Special flags for a keycode that reflect status of 
// modifiers
#define KEY_SPECIAL_FLAG 0x0100
#define KEY_KEYPAD_FLAG  0x0200
#define KEY_SHIFT_FLAG   0x1000
#define KEY_ALT_FLAG     0x2000
#define KEY_CTRL_FLAG    0x4000
#define KEY_CAPS_FLAG    0x8000
// Special ascii characters
#define ASCII_ESC 0x1B
#define ASCII_BS  0x08
// more pc-specific keys
#define KEYPAD_START 128
nk_keycode_t kbd_translate(nk_scancode_t);
typedef struct nk_mouse_event {
    uint8_t  left;
    uint8_t  middle;
    uint8_t  right;
    uint8_t  res; // counts/mm
    sint32_t dx;
    sint32_t dy;
} nk_mouse_event_t;
	

int ps2_init(struct naut_info * naut);